--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>hi typo</h1>
 	<p>
-		some text with a nice red background.
+		some text with a nice red background: to simulate git.
 	</p>
 
 </body>
